<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.battlestrategy.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_FourthFragment"
            app:destination="@id/FourthFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_FifthFragment"
            app:destination="@id/FifthFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SixthFragment"
            app:destination="@id/SixthFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.battlestrategy.SecondFragment"
        android:label="@string/Break"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.battlestrategy.ThirdFragment"
        android:label="@string/Backto"
        tools:layout="@layout/fragment_third">

        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/FourthFragment"
        android:name="com.example.battlestrategy.FourthFragment"
        android:label="@string/Meditate"
        tools:layout="@layout/fragment_fourth">

        <action
            android:id="@+id/action_FourthFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/FifthFragment"
        android:name="com.example.battlestrategy.FifthFragment"
        android:label="@string/Write"
        tools:layout="@layout/fragment_fifth">

        <action
            android:id="@+id/action_FifthFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/SixthFragment"
        android:name="com.example.battlestrategy.SixthFragment"
        android:label="@string/About"
        tools:layout="@layout/fragment_sixth">

        <action
            android:id="@+id/action_SixthFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>